fixed overflow problem on homepage

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -279,10 +279,6 @@ img {
     font-size:5vw;
 }
 
-.home-img-row{
-    width:70%;
-}
-
 .margin-80{
     margin-left:80px;
     margin-right:80px;
